--- a/src/app/pages/content-management/help/index/help-index.component.html
+++ b/src/app/pages/content-management/help/index/help-index.component.html
@@ -7,7 +7,7 @@
   </page-content-header>
   <!-- / HEADER -->
 
-  <div class="content p-24" *ngIf="!onLoad">
+  <div id="target" #containerScroll (scroll)="onScroll($event)" class="content p-24" *ngIf="!onLoad">
     <div class="table-wrapper">
       <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
         <h2 class="pl-8">Daftar Bantuan</h2>
