--- a/src/app/pages/settings/support/support.component.scss
+++ b/src/app/pages/settings/support/support.component.scss
@@ -9,11 +9,258 @@
 }
 
 :host {
-  .bantuan-content {
-    height: 550px;
-    border-left: 1px solid rgba(0, 0, 0, 0.12);
-    padding: 20px 0px 20px 20px;
+  .help-title {
+    padding: 20px;
+    background-color: #f7f7f7;
+
+    .title-red {
+      color: #db1f2d;
+      font-size: 18px;
+    }
+    .title-black {      
+      color: #292929;
+      font-size: 18px;
+    }
+
+    .search-container {
+      width: 600px;
+      padding: 20px;
+
+      .full-width {
+        font-size: 14px;
+        width: 100%;
+        height: 42px;
+        border: 1px solid #ddd;
+        border-radius: 10px;
+        background-color: #fff;
+        .search-icon-layout {
+          padding: 10px;
+          position: absolute;
+          height: 40px;
+          .search-icon {
+            color: #888;
+          }
+        }
+        .search-input {
+          font-size: 14px;
+          padding: 15px 15px 15px px;
+          width: 100%;
+          height: 40px;
+          border-radius: 10px;
+          padding-left: 45px !important;
+        }
+        .search-input::placeholder {
+          color: rgb(200, 200, 200);
+        }
+      }
+    }
   }
+  .ayo-middle {
+    padding: 0 !important;
+  }
+
+  .selected-help {
+    color: #db1f2d;
+    font-weight: 600;
+  }
+
+  .help {
+    background-color: #f7f7f7;
+    border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    padding: 20px;
+    .hc-title {
+      span {
+        font-size: 16px;
+        font-weight: 600;
+        color: #888;
+      }
+    }
+    .help-content {
+      padding: 20px 30px;
+
+      .menu-card:hover {
+        background-color: #f7f7f7;
+        cursor: pointer;
+      }
+      .menu-card {
+        width: 115px;
+        height: 140px;
+        margin: 10px;
+        border-radius: 10px;
+        padding: 16px;
+
+        .header-image {
+          border-radius: 50%;
+          width: 65px;
+          height: 65px;
+          background-color: #f7f7f7;
+      
+          img {
+            border-radius: 50%;
+            width: 55px;
+            height: 55px;
+          }
+        }
+
+        .menu-text {
+          margin-top: 20px;
+          font-size: 12px;
+          font-weight: 600;
+          text-transform: uppercase;
+          text-align: center;
+        }
+      }
+    }
+  }
+
+  .help-other {
+    padding: 20px 30px;
+
+    .hco-title {
+      margin: 10px;
+      padding-Bottom: 15px;
+      border-bottom: 1px solid #ddd;
+      span {    
+        font-size: 18px;
+        font-weight: 600;
+        color: #292929;
+      }
+    }
+    .hco-content {
+      .menu-card:hover {
+        background-color: #f7f7f7;
+        cursor: pointer;
+      }
+      .menu-card {
+        width: 100%;
+        margin: 10px;
+        border-radius: 10px;
+        padding: 16px;
+
+        .header-image {
+          border-radius: 50%;
+          width: 45px;
+          height: 45px;
+          background-color: #f7f7f7;
+      
+          img {
+            border-radius: 50%;
+            width: 35px;
+            height: 35px;
+          }
+        }
+        .hco-text-layout {
+          width: 100%;
+          .hco-text {
+            width: 100%;
+            margin-left: 10px;
+            span {
+              color: #888;
+            }
+            .menu-text {    
+              margin: 0;
+              font-size: 16px;
+              font-weight: 600;
+              text-align: left;
+            }
+          }
+          .menubutton-arrow {
+            color: #888;
+          }
+        }
+      }
+    }
+  }
+
+  // .ayo-middle-help-detail {
+  //   padding-left: 8px;
+  // }
+  .full-size {
+    width: 100%;
+    height: 100%;
+  }
+  .button-back {
+    color: #888;
+  }
+  .back {
+    font-size: 14px;
+    color: #888;
+  }
+
+  .help-detail {
+    height: 610px;
+    border-left: 1px solid rgba(0,0,0,.12);
+    .search-container-help-detail {
+      width: 100%;
+      .full-width {
+        font-size: 14px;
+        width: 100%;
+        height: 42px;
+        border: 1px solid #ddd;
+        border-radius: 10px;
+        background-color: #fff;
+        .search-icon-layout {
+          padding: 10px;
+          position: absolute;
+          height: 40px;
+          .search-icon {
+            color: #888;
+          }
+        }
+        .search-input {
+          font-size: 14px;
+          padding: 15px 15px 15px px;
+          width: 100%;
+          height: 40px;
+          border-radius: 10px;
+          padding-left: 45px !important;
+        }
+        .search-input::placeholder {
+          color: rgb(200, 200, 200);
+        }
+      }
+    }
+    .help-detail-content {
+      margin-top: 15px;
+      max-height: 420px;
+      overflow-y: auto;
+    }
+    .help-detail-footer {
+      width: 500px;
+      height: 90px;
+      position: absolute;
+      bottom: 20px;
+      left: 360px;
+      .title {
+        font-size: 14px;
+        font-weight: 600;
+        color: #333;
+        padding: 10px 0;
+      }
+      .like:hover {
+        cursor: pointer;
+        width: fit-content;
+      }
+      .unlike:hover {
+        cursor: pointer;
+        width: fit-content;
+      }
+      .thumb-up {
+        color: #333
+      }
+      .thumb-up-red {
+        color: #db1f2d
+      }
+      .thumb-down {
+        color: #333
+      }
+      .thumb-down-red {
+        color: #db1f2d
+      }
+    }
+  }
+
 
   .dynamic {
     height: 450px;
