--- a/src/app/pages/dte/automation/index/audience-trade-program-index.component.html
+++ b/src/app/pages/dte/automation/index/audience-trade-program-index.component.html
@@ -50,9 +50,9 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Jumlah Koin per Frekuensi" prop="coin_max">
+        <ngx-datatable-column name="Jumlah Koin per Frekuensi" prop="max_frequency">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            {{row.coin_max}}
+            {{row.max_frequency}}
           </ng-template>
         </ngx-datatable-column>
 
