--- a/src/app/pages/dte/automation/edit/audience-trade-program-edit.component.html
+++ b/src/app/pages/dte/automation/edit/audience-trade-program-edit.component.html
@@ -5,7 +5,7 @@
   <!-- / HEADER -->
   <div class="content p-24">
     <div class="ayo-main-wrapper mat-white-bg p-0" fxLayout="column">
-      <mat-tab-group [selectedIndex]="selectedTab" (selectedTabChange)="setSelectedTab($event)">
+      <!-- <mat-tab-group [selectedIndex]="selectedTab" (selectedTabChange)="setSelectedTab($event)">
         <mat-tab label="e-Order" [disabled]="(onDetail && automationType !== 'e-order')">
           <app-eorder-edit *ngIf="selectedTab === 0" [automationType]="'e-order'">
           </app-eorder-edit>
@@ -18,7 +18,128 @@
           <app-eorder-edit *ngIf="selectedTab === 2" [automationType]="'referral_code'">
           </app-eorder-edit>
         </mat-tab>
-      </mat-tab-group>
+      </mat-tab-group> -->
+      <form autocomplete="off" [formGroup]="formAutomation">
+        <div fxLayout="row" class="px-24" fxLayoutAlign="space-between center">
+          <h2 class="">DTE Automation</h2>
+        </div>
+        <div class="ayo-middle" fxLayout="column">
+          <div class="mt-8 px-24" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
+            <mat-form-field fxFlex="45%" class="is-light form-primary">
+              <mat-select placeholder="Automation" formControlName="automation">
+                <mat-option *ngFor="let item of listAutomation" [value]="item.value">{{item.name}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div class="mt-8 px-24" fxLayout="row">
+            <h3 class="text-bold">Durasi</h3>
+          </div>
+          <div class="mt-8 px-24" fxLayout="row wrap" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
+            <mat-form-field fxFlex="45%" class="is-light form-primary">
+              <input matInput (focus)="startPicker.open()" [matDatepicker]="startPicker" placeholder="Tanggal Mulai"
+                formControlName="startDate">
+              <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
+              <mat-datepicker #startPicker></mat-datepicker>
+            </mat-form-field>
+
+            <mat-form-field fxFlex="45%" class="is-light form-primary">
+              <input matInput (focus)="endDate.open()" [matDatepicker]="endDate" placeholder="Tanggal Berakhir"
+                formControlName="endDate">
+              <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
+              <mat-datepicker #endDate></mat-datepicker>
+            </mat-form-field>
+          </div>
+          <div class="mt-8 px-24" fxLayout="row" *ngIf="formAutomation.get('automation').value === 'coupon'">
+            <mat-form-field fxFlex="45%" class="is-light form-primary">
+              <input matInput type="number" placeholder="Total Kupon" formControlName="coupon_total">
+              <mat-error>
+                Total kupon harus diisi.
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div class="mt-8 px-24" fxLayout="row wrap" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
+            <mat-form-field fxFlex="45%" class="is-light form-primary">
+              <input matInput type="number" placeholder="Jumlah Coin Reward per Frekuensi"
+                formControlName="coin_reward">
+            </mat-form-field>
+            <mat-form-field fxFlex="45%" class="is-light form-primary">
+              <input matInput type="number" placeholder="Nilai Coin Reward" formControlName="coin_max">
+              <mat-error>
+                Nilai Coin Reward harus diisi.
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <span style="margin-top: -20px;" class="mat-error" *ngIf="coinRewardInvalid">
+            Nilai coin reward harus lebih tinggi dari Jumlah per Frekuensi.
+          </span>
+          <div formArrayName="skus" *ngFor="let sku of formAutomation.get('skus').controls; let i = index"
+            class="mt-8 px-24" fxFlex="90%" fxLayout="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
+            <div fxFlex="100%" [formGroupName]="i" fxLayout="row wrap" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
+              <!-- <mat-form-field fxFlex="45%" class="is-light form-primary">
+                <input matInput type="text" placeholder="Cari Produk yang ditargetkan">
+              </mat-form-field> -->
+              <mat-form-field fxFlex="45%" class="is-light form-primary" #singleSelect>
+                <mat-select [formControl]="formSku" placeholder="Cari SKU yang di targetkan">
+                  <mat-option>
+                    <ngx-mat-select-search [formControl]="formFilterSku"
+                      [placeholderLabel]="'Cari SKU yang di targetkan'" [noEntriesFoundLabel]="'SKU tidak ditemukan'">
+                    </ngx-mat-select-search>
+                  </mat-option>
+                  <mat-option *ngFor="let sku of filteredSku | async" [value]="sku">
+                    {{sku | json}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+              <div class="mt-24 mb-24" fxFlex="45%">
+                <button *ngIf="i === 0" class="mb-10" (click)="addSkuProduct()" fxFlex="45%" mat-raised-button
+                  type="button">
+                  <mat-icon>add</mat-icon>
+                  Tambah Produk
+                </button>
+                <button mat-icon-button type="button" *ngIf="i > 0" (click)="removeSkuProduct(i)">
+                  <mat-icon class="secondary-text">delete</mat-icon>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="mt-8 px-24" fxLayout="row">
+            <mat-form-field fxFlex="45" class="is-light form-primary">
+              <mat-select placeholder="Pilih Trade Program" #singleSelectTradeProgram
+                formControlName="trade_program_id">
+                <ngx-mat-select-search [formControl]="filterTradeProgram" [placeholderLabel]="'Cari Trade Program...'"
+                  [noEntriesFoundLabel]="'Tidak ada Trade Program yang ditemukan'"></ngx-mat-select-search>
+                <mat-option *ngFor="let item of filteredTradeProgram | async" [value]="item.id">
+                  {{item.name}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div class="mt-8 px-24" fxLayout="row wrap" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
+            <mat-form-field fxFlex="45%" class="is-light form-primary">
+              <input matInput type="text" placeholder="Judul Tantangan" formControlName="title_challenge">
+              <mat-error>
+                Judul Tantangan harus diisi.
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div class="mt-8 px-24" fxLayout="row wrap" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
+            <mat-form-field fxFlex="45%" class="is-light form-primary">
+              <input matInput type="text" placeholder="Deskripsi Tantangan" formControlName="description_challenge">
+              <mat-error>
+                Deskripsi Tantangan harus diisi.
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div class="mt-8 px-24" fxLayout="row wrap" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
+            <mat-form-field fxFlex="45%" class="is-light form-primary">
+              <input matInput type="text" placeholder="Teks Pada Button" formControlName="button_text">
+              <mat-error>
+                Teks Pada Button harus diisi.
+              </mat-error>
+            </mat-form-field>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
 </div>
